PMforce/src/objects/Question_Repository__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Count__c</fullName>
        <label>Question Count</label>
        <summaryForeignKey>Question_Datas__c.AddQuestion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Repository_Name__c</fullName>
        <label>Repository Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question Repository</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Question_Count__c</columns>
        <columns>Repository_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>SurveyReport Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Repository</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>